dark mode fix, js script separation from html, cleaning

--- a/styles.css
+++ b/styles.css
@@ -97,11 +97,17 @@ section h2 {
 
 #testimonials {
     padding: 40px 0;
-    background-color: #fff;
+    background-color: #f4f4f4;
     opacity: 0;
     animation: fadeIn 1s forwards;
     animation-delay: 0.6s;
     transition: background-color 0.3s, color 0.3s;
+}
+
+#testimonials .card:hover {
+    /* Hover effects disabled for .card elements inside testimonials */
+    transform: none;
+    box-shadow: none;
 }
 
 #testimonials h2 {
@@ -121,7 +127,7 @@ section h2 {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin: 10px;
-    width: 45%;
+    width: calc(45% - 20px); /* Adjusted width calculation to accommodate margins, was fucking itself up idk why */
     transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s, color 0.3s;
     position: relative;
     cursor: pointer;
@@ -229,12 +235,14 @@ footer {
     color: #fff;
     padding: 20px 0;
     text-align: center;
+    font-size: 0.9em;
 }
 
 footer nav a {
     color: #fff;
     margin: 0 10px;
     text-decoration: none;
+    font-size: 0.9em;
 }
 
 footer nav a:hover {
